Changelog
=========

0.1.4 (unreleased)
------------------

- changed map widgets jsfactory to provide a simple way to customize it
- added z3c.autoinclude entry point
- fixed layers query in maplayers
- Added ability to drag features drawn onto OL map when editing [davidjb]
- Minor spelling corrections [davidjb]


0.1.3 (2011-02-20)
------------------

- changed Google maps javascript url


0.1.2 (2010-12-28)
------------------

- fixed UnicodeDecodeError in maplayers [gborelli]
- fixed set_coordinates js [gborelli]
- Added dutch translations [robgietema]


0.1.1 (2010-11-13)
------------------

- added geocoding to controlpanel
- added cgmap.portal_url in collective.geo javascript
- Removed unused googleapi configuration from controlpanel
- Changed numZoomLevels in default mapwidget 
- Updated Google map layers to Googlemaps v3
- fixed italian translation


0.1 (2010-10-31)
----------------

* Initial release moved from collective.geo.settings