@@ -6,7 +6,7 @@ This package provides a graphical user interface to store settings for collectiv
 Tests
 -----
 we start the tests with the usual boilerplate
-    >>> from Products.Five.testbrowser import Browser
+    >>> from Testing.testbrowser import Browser
     >>> browser = Browser()
     >>> portal_url = self.portal.absolute_url()
     >>> self.portal.error_log._ignored_exceptions = ()
