@@ -31,6 +31,10 @@ setup(name='collective.geo.mapwidget',
           'plone.app.z3cform',
           'collective.z3cform.colorpicker',
       ],
+      extras_require = {
+        'test': [
+            'Products.PloneTestCase']
+      },
       entry_points="""
       # -*- Entry points: -*-
       [z3c.autoinclude.plugin]
