@@ -4,8 +4,11 @@ Changelog
 0.1.4 (unreleased)
 ------------------
 
-- changed map widgets jsfactory to provide a simple way to customize it
-- added z3c.autoinclude entry point
+- changed Browser import from Testing.testbrowser [gborelli]
+- removed zope.app.component import [gborelli]
+- added extra_requires in setup.py for test [gborelli]
+- changed map widgets jsfactory to provide a simple way to customize it [gborelli]
+- added z3c.autoinclude entry point [gborelli]
 - fixed layers query in maplayers
 - Added ability to drag features drawn onto OL map when editing [davidjb]
 - Minor spelling corrections [davidjb]
